--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8">
     <title>Giphy API</title>
 
-    <script type="text/javascript" src="assets/jquery-3.2.1.js"></script>
-    <script type="text/javascript" src="assets/script.js"></script>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="container">
-    <h1>Movie Search</h1>
+    <h1>Get yo Giphs</h1>
 
     <!-- Rendered buttons will get dumped here  -->
     <div id="buttons-view"></div>
@@ -31,5 +29,9 @@
     <div id="gifs-view"></div>
 
 </div>
+
+
+<script type="text/javascript" src="assets/jquery-3.2.1.js"></script>
+<script type="text/javascript" src="assets/script.js"></script>
 </body>
 </html>
